<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Political Preparedness</string>
  <string name="find_my_representatives">Find My Representatives</string>
  <string name="permissions_request">Please grant us  permissions</string>
  <string name="permissions_request_settings">Go to settings to manually grant us denied permissions</string>
  <string name="location_required_error">We could not retrieve your location</string>
  <string name="representative_search_form">Representative Search Form</string>
  <string name="use_my_location">Use my Location</string>
  <string name="hint_city">City</string>
  <string name="hint_address_line_2">Address Line 2</string>
  <string name="hint_address_line_1">Address Line 1</string>
  <string name="hint_zip">Zip</string>
  <string name="my_representative">My Representatives</string>
  <string name="empty_try_again_later">No items could be found at this time. Please try again later.</string>
  <string name="follow_election">Follow Election</string>
  <string name="unfollow_election">Unfollow Election</string>
  <string name="election_information">Election Information</string>
  <string name="voting_locations">Voting Locations</string>
  <string name="ballot_information">Ballot Information</string>
  <string name="upcoming_elections">Upcoming Elections</string>
  <string name="state_correspondence">State Correspondence</string>
  <string name="saved_elections">Saved Elections</string>
  <string name="representatives">Representatives</string>
  <string name="elections">Elections</string>
  <string name="voter_information">Voter Information</string>
  <string name="msg_network_error">An error occurred while fetching the data. Please check connection and try again</string>
  <string name="no_browser_app">No app found that could open the link. Please install browser</string>
  <string name="no_content">No content could be found at this time</string>

</resources>
