<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_graph"
  android:label="nav_graph"
  app:startDestination="@id/launchFragment">

  <fragment
    android:id="@+id/launchFragment"
    android:name="com.example.android.politicalpreparedness.launch.LaunchFragment"
    android:label="@string/app_name"
    tools:layout="@layout/fragment_launch">

    <action
      android:id="@+id/to_representative"
      app:destination="@id/representativeFragment" />

    <action
      android:id="@+id/to_elections"
      app:destination="@id/electionsFragment" />

  </fragment>

  <fragment
    android:id="@+id/representativeFragment"
    android:name="com.example.android.politicalpreparedness.representative.RepresentativeFragment"
    android:label="@string/representatives"
    tools:layout="@layout/fragment_representative" />

  <fragment
    android:id="@+id/electionsFragment"
    android:name="com.example.android.politicalpreparedness.election.ElectionsFragment"
    android:label="@string/elections"
    tools:layout="@layout/fragment_election">

    <action
      android:id="@+id/to_voter_info"
      app:destination="@id/voterInfoFragment" />
  </fragment>

  <fragment
    android:id="@+id/voterInfoFragment"
    android:name="com.example.android.politicalpreparedness.election.VoterInfoFragment"
    android:label="@string/voter_information"
    tools:layout="@layout/fragment_voter_info">
    <argument
      android:name="arg_election_id"
      app:argType="integer" />
    <argument
      android:name="arg_division"
      app:argType="com.example.android.politicalpreparedness.network.models.Division" />
  </fragment>

</navigation>
