<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:motion="http://schemas.android.com/tools">

  <!-- TODO: Add data binding node -->

  <!-- TODO: Add motion scene to hide form on vertical scroll. -->
  <androidx.constraintlayout.motion.widget.MotionLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
      android:id="@+id/search_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/representative_search_form"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO: Add data binding value -->
    <!-- TODO: Add visual styling and content -->
    <EditText
      android:id="@+id/address_line_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:hint="@string/hint_address_line_1"
      android:inputType="textPostalAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/search_title" />

    <!-- TODO: Add data binding value -->
    <!-- TODO: Add visual styling and content -->
    <EditText
      android:id="@+id/address_line_2"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:autofillHints=""
      android:hint="@string/hint_address_line_2"
      android:inputType="textPostalAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/address_line_1" />

    <!-- TODO: Add data binding value -->
    <!-- TODO: Add visual styling and content -->
    <EditText
      android:id="@+id/city"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:hint="@string/hint_city"
      android:inputType="textPostalAddress"
      app:layout_constraintEnd_toStartOf="@id/state"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/address_line_2" />

    <!-- TODO: Add default values from provided resources  -->
    <!-- TODO: Add data binding value -->
    <!-- TODO: Add visual styling and content -->
    <Spinner
      android:id="@+id/state"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:autofillHints=""
      android:inputType="textPostalAddress"
      app:layout_constraintBottom_toBottomOf="@id/city"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/city"
      app:layout_constraintTop_toTopOf="@id/city" />

    <!-- TODO: Add data binding value -->
    <!-- TODO: Add visual styling and content -->
    <EditText
      android:id="@+id/zip"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:hint="@string/hint_zip"
      android:inputType="number"
      android:maxLength="5"
      app:layout_constraintEnd_toEndOf="@id/city"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/city" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/button_search"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/wide_btn_margin_start_end"
      android:layout_marginTop="@dimen/wide_btn_margin_top_bottom"
      android:layout_marginEnd="@dimen/wide_btn_margin_start_end"
      android:layout_marginBottom="@dimen/wide_btn_margin_top_bottom"
      android:backgroundTint="@color/colorPrimary"
      android:text="@string/find_my_representatives"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="@dimen/wide_btn_txt_size"
      app:layout_constraintTop_toBottomOf="@id/zip" />


    <com.google.android.material.button.MaterialButton
      android:id="@+id/button_location"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/wide_btn_margin_start_end"
      android:layout_marginTop="@dimen/wide_btn_margin_top_bottom"
      android:layout_marginEnd="@dimen/wide_btn_margin_start_end"
      android:layout_marginBottom="@dimen/wide_btn_margin_top_bottom"
      android:backgroundTint="@color/colorPrimary"
      android:text="@string/use_my_location"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="@dimen/wide_btn_txt_size"
      app:layout_constraintTop_toBottomOf="@id/button_search" />

    <TextView
      android:id="@+id/representative_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/my_representative"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/button_location" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/representative_recyclerview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:orientation="vertical"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintTop_toBottomOf="@id/representative_title" />

    <!-- TODO: Add visual styling and content -->
    <TextView
      android:id="@+id/list_placeholder"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:gravity="center"
      android:textAlignment="center"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/representative_title"
      motion:visibilityMode="ignore" />

  </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>