<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    <variable
      name="voterResponse"
      type="com.example.android.politicalpreparedness.network.models.VoterInfoResponse" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.politicalpreparedness.MainActivity">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/election_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/default_padding"
      android:singleLine="true"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@{voterResponse.election.name}"
      tools:title="Winconsin Presidential Primary Election" />

    <TextView
      android:id="@+id/election_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_padding"
      android:text="@{voterResponse.election.electionDay.toLocaleString()}"
      app:layout_constraintTop_toBottomOf="@id/election_name"
      tools:text="12 November 2055" />

    <TextView
      android:id="@+id/state_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/election_information"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@id/election_date"
      app:layout_constraintTop_toBottomOf="@id/election_date" />

    <TextView
      android:layout_marginTop="@dimen/wide_btn_margin_top_bottom"
      android:layout_marginBottom="@dimen/wide_btn_margin_top_bottom"
      android:id="@+id/state_locations"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="@{()->viewModel.votingLocationsClick(voterResponse.state.get(0).electionAdministrationBody.votingLocationFinderUrl)}"
      android:text="@string/voting_locations"
      android:visibility="@{voterResponse.state.get(0).electionAdministrationBody.votingLocationFinderUrl != null ? View.VISIBLE : View.GONE}"
      app:layout_constraintStart_toStartOf="@id/election_date"
      app:layout_constraintTop_toBottomOf="@id/state_header" />

    <TextView
      android:layout_marginTop="@dimen/wide_btn_margin_top_bottom"
      android:layout_marginBottom="@dimen/wide_btn_margin_top_bottom"
      android:id="@+id/state_ballot"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="@{()->viewModel.ballotInfoClick(voterResponse.state.get(0).electionAdministrationBody.ballotInfoUrl)}"
      android:text="@string/ballot_information"
      android:visibility="@{voterResponse.state.get(0).electionAdministrationBody.ballotInfoUrl != null ? View.VISIBLE : View.GONE}"
      app:layout_constraintStart_toStartOf="@id/election_date"
      app:layout_constraintTop_toBottomOf="@id/state_locations" />

    <androidx.constraintlayout.widget.Group
      android:id="@+id/address_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="@{voterResponse.state.get(0).electionAdministrationBody.correspondenceAddress != null ? View.VISIBLE : View.GONE}"
      app:constraint_referenced_ids="state_correspondence_header,address" />

    <TextView
      android:id="@+id/state_correspondence_header"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/state_correspondence"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@id/election_date"
      app:layout_constraintTop_toBottomOf="@id/state_ballot" />

    <TextView
      android:id="@+id/address"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{voterResponse.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
      app:layout_constraintStart_toStartOf="@id/election_date"
      app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
      tools:text="California" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/button_follow"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/wide_btn_margin_start_end"
      android:layout_marginTop="@dimen/wide_btn_margin_top_bottom"
      android:layout_marginEnd="@dimen/wide_btn_margin_start_end"
      android:layout_marginBottom="@dimen/wide_btn_margin_top_bottom"
      android:backgroundTint="@color/colorPrimary"
      android:onClick="@{()->viewModel.isElectionSaved ? viewModel.unFollowElection() : viewModel.followElection()}"
      android:text="@{viewModel.isElectionSaved ? @string/unfollow_election : @string/follow_election}"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="@dimen/wide_btn_txt_size"
      app:layout_constraintBottom_toBottomOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>